<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MarkerForm">

    <EditText
        android:id="@+id/editText"
        android:layout_width="117dp"
        android:layout_height="82dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/text_border"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="12:00"
        android:inputType="time"
        android:onClick="showTimePickerDialog"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/backGray"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="getLocationPermission"
        android:text="@string/myLoc"
        android:textAlignment="viewStart"
        android:textColor="@color/backGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button5"
        android:layout_width="164dp"
        android:layout_height="69dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        android:onClick="finishForm"
        android:text="@string/ustvari_oznako"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginTop="160dp"
        android:text="@string/kdaj_odidete"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>